--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,13 @@ services:
   edge_web:
     container_name: edge_web
     image: ghcr.io/dnjooiopa/edge_web:${edge_version}
+    restart: on-failure
     ports:
       - 8088:80
   edge_api-server:
     container_name: edge_api-server
     image: ghcr.io/dnjooiopa/edge_api-server:${edge_version}
+    restart: on-failure
     env_file: .env.api_server
     ports:
       - 3030:3030
