--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
     ports:
       - 3030:3030
     volumes:
-      - /mnt/storage/:/usr/src/app/data/
+      - ./db:/usr/src/app/data/
+      - ./certificates:/usr/certificates
   edge_timescaledb:
     container_name: edge_timescaledb
     build:
@@ -23,7 +24,7 @@ services:
     restart: unless-stopped
     env_file: .env.timescaledb
     volumes:
-      - /mnt/storage/timescaledb:/var/lib/postgresql/data
+      - ./db/timescale:/var/lib/postgresql/data
     ports:
       - 5434:5432
   edge_emqx:
