--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   edge_web:
     container_name: edge_web
     image: ghcr.io/dnjooiopa/edge_web:${edge_version}
-    restart: on-failure
+    restart: unless-stopped
     ports:
-      - 8088:80
+      - 80:80
   edge_api-server:
     container_name: edge_api-server
     image: ghcr.io/dnjooiopa/edge_api-server:${edge_version}
-    restart: on-failure
+    restart: unless-stopped
     env_file: .env.api_server
     ports:
       - 3030:3030
@@ -30,14 +30,14 @@ services:
   edge_emqx:
     container_name: edge_emqx
     image: emqx/emqx:4.3.8
-    restart: on-failure
+    restart: unless-stopped
     env_file: .env.emqx
     volumes:
       - emqx-data:/opt/emqx/data
       - emqx-etc:/opt/emqx/etc
       - emqx-log:/opt/emqx/log
-      - ./certificates/servers/device.edge_iot/device.edge_iot.key:/etc/certs/device.edge_iot.key
-      - ./certificates/servers/device.edge_iot/device.edge_iot.pem:/etc/certs/device.edge_iot.pem
+      - ./certificates/servers/${SERVER_CN}/${SERVER_CN}.key:/etc/certs/${SERVER_CN}.key
+      - ./certificates/servers/${SERVER_CN}/${SERVER_CN}.pem:/etc/certs/${SERVER_CN}.pem
       - ./certificates/ca.pem:/etc/certs/ca.pem
     ports:
       - 1883:1883
