--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,9 @@ services:
     image: emqx/emqx:4.3.8
     restart: unless-stopped
     env_file: .emqx.env
+    environment:
+      - EMQX_LISTENER__SSL__EXTERNAL__KEYFILE=/etc/certs/${SERVER_CN}.key
+      - EMQX_LISTENER__SSL__EXTERNAL__CERTFILE=/etc/certs/${SERVER_CN}.pem
     volumes:
       - emqx-data:/opt/emqx/data
       - emqx-etc:/opt/emqx/etc
