--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - 3030:3030
     volumes:
-      - ./db:/usr/src/app/data/
+      - ${DB_PATH}/:/usr/src/app/data/
       - ./certificates:/usr/certificates
   edge_timescaledb:
     container_name: edge_timescaledb
@@ -23,7 +23,7 @@ services:
     restart: unless-stopped
     env_file: .timescaledb.env
     volumes:
-      - ./db/timescale:/var/lib/postgresql/data
+      - .${DB_PATH}/timescale:/var/lib/postgresql/data
     ports:
       - 5434:5432
   edge_emqx:
